<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Legendary Randomiser</string>
    <string name="action_settings">Settings</string>
    <string name="randomise">Randomise</string>
    <string name="title_activity_game_details">Game Details</string>
    <string name="numPlayersLabel">Number of players</string>
    <string name="MastermindLabel">You are fighting</string>
    <string name="leading_label">leading the combined forces of</string>
    <string name="also_leading_label">and</string>
    <string name="scheme_label">who is planning</string>
    <string name="villaindeck_label">Add the following cards to the Villain/Adversary deck:</string>
    <string name="herodeck_label">Add the following cards to the Hero/Ally deck:</string>
    <string name="heroes_label">Joining your side are these heroes/allies</string>
    <string name="notes_label">Additional notes</string>
    <string name="reroll_action_label">Reroll</string>
    <string name="mastermind_setup_label">Mastermind/Commander:</string>
    <string name="scheme_setup_label">Scheme:</string>
    <string name="pref_sets_title">Sets available</string>
    <string name="lil_expansion_icon_desc">Expansion Icon</string>
    <string name="lil_affiliation_icon_desc">Affiliation Icon</string>
    <string name="default_sets">0x0000000000000001</string>
    <string name="colour_content_description">Colour</string>
    <string name="show_colours_action_label">Show hero/ally colours</string>
    <string name="show_affiliation_action_label">Show affiliation</string>
    <string name="pref_stayawake_summary_on">Screen will not lock while you set up the game</string>
    <string name="pref_stayawake_title">Keep screen on</string>
    <string name="use_advanced_setup_rules">Use advanced setup rules</string>

</resources>
