<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsSelectActivity" >

    <TextView
        android:id="@+id/numPlayersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/num_players_seek"
        android:layout_alignLeft="@+id/num_players_seek"
        android:layout_marginBottom="37dp"
        android:text="@string/numPlayersLabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/num_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numPlayersLabel"
        android:layout_alignBottom="@+id/numPlayersLabel"
        android:layout_alignRight="@+id/num_players_seek"
        android:gravity="right"
        android:text="" />

    <Button
        android:id="@+id/randomiseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="randomiseGame"
        android:text="@string/randomise" />

    <SeekBar
        android:id="@+id/num_players_seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:max="4"
        android:progress="1" />
    
    <CheckBox
        android:id="@+id/aos_use_advanced_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/num_players_seek"
        android:text="@string/use_advanced_setup_rules"
        android:visibility="gone"
        android:onClick="checkAdvancedRules" />
    
</RelativeLayout>